# ahnc

./: .gitignore  Cargo.toml  README.md  TODO.md  build-debug.bash  build-release.bash  build.rs  pubspec.yaml  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ahnc/: MainActivity.kt
app/: build.gradle.kts
app/src/androidTest/java/com/example/ahnc/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ahnc/: MainActivity.kt
app/src/main/java/com/ahnc/ui/: DebugConsole.kt  Permissions.kt
app/src/main/java/com/ahnc/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/ahnc/: MainActivity.kt
app/src/main/java/com/example/ahnc/ui/theme/: Color.kt  (+2 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/ahnc/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: device_info.dart  device_manager.dart  list_notifier.dart  main.dart  message.dart  nearby_manager.dart  network_manager.dart
lib/widgets/: connections.dart  debug_console.dart  permission.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: common.rs  main.rs  win.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
