[package]
name = "ahnc"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Devices_Enumeration",
    "Devices_WiFiDirect",
    "Networking_Sockets",
    "Storage_Streams"
]}

[build-dependencies]
cfg_aliases = "0.2"
